--- a/src/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.csproj
+++ b/src/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.csproj
@@ -36,6 +36,8 @@
     <Reference Include="HedgehogDevelopment.SitecoreProject.Tasks">
       <HintPath>..\..\packages\HedgehogDevelopment.TDS.5.6.0.13\build\HedgehogDevelopment.SitecoreProject.Tasks.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Build.Framework" />
+    <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tasks\Filters\CullFilesFromProject.cs" />
     <Compile Include="Tasks\Filters\CullItemsFromProjectByExistanceInChangedItemsFile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
