--- a/src/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.targets
+++ b/src/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy/Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.targets
@@ -52,6 +52,7 @@
         ]]></Code>
     </Task>
   </UsingTask>
+  <UsingTask AssemblyFile="Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.dll" TaskName="Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.Tasks.Filters.CullFilesFromProject"/>
   <Target Name="BeforeSitecoreBuild" Condition="'$(CustomGitDeltaDeploy)' == 'True'">
     <GetTdsNuGetPackageFolder PackagesFolderPath="$(SolutionDir)/packages/">
       <Output TaskParameter="TdsNuGetFolder" PropertyName="TdsNuGetPackageDllFolder" />
@@ -123,5 +124,23 @@
 
     <Exec Condition="$(GitExists)"
           Command="git rev-parse HEAD &gt; $(MSBuildProjectDirectory)/Report/LastDeploymentGitCommitId.txt" Outputs="$(MSBuildProjectDirectory)/Report/LastDeploymentGitCommitId.txt" WorkingDirectory="$(SolutionDir)"  />
+  </Target>
+
+  <Target Name="AfterSitecoreBuild" Condition="'$(CustomGitDeltaDeploy)' == 'True' and '$(CullProjectFiles)' == 'True'">
+	  <!-- called to set LastDeploymentGitCommitID variable -->
+    <CallTarget Targets="GitDiff"/>
+	
+	  <!-- list all files -->
+	  <Exec Command="git ls-files --full-name &gt; &quot;$(MSBuildProjectDirectory)/Report/AllFiles.$(MSBuildProjectName).txt&quot;" Outputs="$(MSBuildProjectDirectory)/Report/AllFiles.$(MSBuildProjectName).txt" WorkingDirectory="$(SolutionDir)" />
+	
+	  <!-- list changed files -->
+	  <Exec Command="git diff --name-only $(LastDeploymentGitCommitID)..$(GitCurrentCommitID) &gt; &quot;$(MSBuildProjectDirectory)/Report/DiffFiles.$(MSBuildProjectName).txt&quot;" Outputs="$(MSBuildProjectDirectory)/Report/DiffFiles.$(MSBuildProjectName).txt" WorkingDirectory="$(SolutionDir)" />
+	
+	  <!-- aggregate into single file listing only unchanged files -->
+	  <Exec Command="findstr /vig:&quot;$(MSBuildProjectDirectory)\Report\DiffFiles.$(MSBuildProjectName).txt&quot; &quot;$(MSBuildProjectDirectory)\Report\AllFiles.$(MSBuildProjectName).txt&quot; &gt; &quot;$(MSBuildProjectDirectory)\Report\Unchanged.$(MSBuildProjectName).txt&quot;" Outputs="$(MSBuildProjectDirectory)\Report\Unchanged.$(MSBuildProjectName).txt" WorkingDirectory="$(SolutionDir)" />
+	
+	  <CullFilesFromProject OutputPath="$(_OutputPath)" UnchangedFiles="$(MSBuildProjectDirectory)/Report/Unchanged.$(MSBuildProjectName).txt">
+	    <Output PropertyName="DebugMessage" TaskParameter="DebugMessage"/>
+	  </CullFilesFromProject>
   </Target>
 </Project>
