Updated comments/examples and removed obsolete attribute in git diff.

--- a/TdsGlobal.config
+++ b/TdsGlobal.config
@@ -20,6 +20,8 @@
     <!-- Custom Build Extensions Properties - examples given-->
     <!--<CustomGitDeltaDeploy>True</CustomGitDeltaDeploy>-->
     <!--<LastDeploymentGitCommitID>50e42cceced5661dcb8360d010189b8163558e24</LastDeploymentGitCommitID>-->
+    <!--<LastDeploymentGitTagName>ProductionRelease</LastDeploymentGitTagName>-->
+    <!--<CullProjectFiles>True</CullProjectFiles>-->
     <!-- Default Delta Deploy - example of passing the date to the default delta deploy feature. (This is only for the default delta deploy feature. It is not used for the custom git delta deploy. -->
     <!--<IncludeItemsChangedAfter>2016-03-21</IncludeItemsChangedAfter>-->
     <!-- Default Delta Deploy - example of passing in a relative date (1 week ago) to the default delta deploy feature. -->
