--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,8 +22,8 @@ before_build:
   - ps: gitversion /l console /output buildserver /updateAssemblyInfo
 
 build_script:
-  - cmd: msbuild Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.sln /configuration "Debug" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:normal /p:PackageVersion=%GitVersion_SemVer%
-  - cmd: msbuild Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.sln /configuration "Release" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:normal /p:PackageVersion=%GitVersion_SemVer%
+  - cmd: msbuild Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.sln /p:Configuration=Debug /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:normal /p:PackageVersion=%GitVersion_SemVer%
+  - cmd: msbuild Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.sln /p:Configuration=Release /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:normal /p:PackageVersion=%GitVersion_SemVer%
 
 after_build:
 - cmd: nuget pack "src\_Nuget\Hedgehog.TDS.BuildExtensions.GitDeltaDeploy.nuspec" -version "%GitVersion_SemVer%"
